Update peer dependencies and @acrool/js-utils version
Updated peer dependencies to support React 19.x and upgraded @acrool/js-utils to version 3.2.25. Removed the "browser" field from the exports in package.json to streamline module resolution.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "browser": "./dist/acrool-react-flip-countdown.es.js",
       "import": "./dist/acrool-react-flip-countdown.es.js"
     },
     "./dist/index.css": "./dist/react-flip-countdown.css"
@@ -48,11 +47,11 @@
     "release:alpha": "standard-version --prerelease alpha"
   },
   "peerDependencies": {
-    "react": "^18.x",
-    "react-dom": "^18.x"
+    "react": ">=19.0.0 <20.0.0",
+    "react-dom": ">=19.0.0 <20.0.0"
   },
   "dependencies": {
-    "@acrool/js-utils": "^3.2.20",
+    "@acrool/js-utils": "^3.2.25",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13"
   },
